--- a/hurtumartworkz/src/components/Navbar/Navbar.css
+++ b/hurtumartworkz/src/components/Navbar/Navbar.css
@@ -1,25 +1,45 @@
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap");
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Titillium Web", sans-serif;
+}
+
+:root{
+    --mainColor: #29335C;
+    --mainColorLight:#576ab6; 
+    --secondaryColor:#DB2839;
+    --textColor:#eee;
+}
+
 .Nav{
-    justify-content: center;
-    text-align: center;
-    background-color: #563CB1;
-    padding: 30px 170px  30px 170px;
+    display: flex; 
+    align-items: center;
+    justify-content: space-between;
+    height: 80px;
+    padding:0 2rem;
+    background-color: var(--mainColor);
+    color: var(--textColor); 
 
 }
+
 .NavbarWrapper{
  list-style-type: none;
  margin: 0;
  padding: 0;
  justify-content: center;
 }
+
 .NavLogo{
     float: left;
     font-size: 25px;
-    font-weight: 900;
-    margin: -8px 2px 1px 15px;
-    transition: 0.2s ease-in;
-
-    
+    font-weight: 50;
+    margin: 0 1.5rem ;
+    transition: 0.2s ease-in;  
 }
+
 .NavElements{
     display: inline;
     justify-content: center;
@@ -29,20 +49,6 @@
     padding: 10px 20px 10px 20px;
 }
 
-
-.NavButton{
-    float: right;
-    background-color: #E93A7D;
-    border-radius: 20px;
-    padding: 10px 20px 10px 20px;
-    margin: -8px 2px 1px 2px;
-
-}
-.NavButton:hover{
-    background-color: #dc3776;
-    cursor: pointer;
-
-}
 .Link{
     text-decoration: none;
     color: white;
@@ -68,6 +74,7 @@
     cursor: pointer;
     color: white;
 }
+
 @media screen and (max-width: 925px){
     .Nav{
         padding: 25px 0px  25px 20px;
@@ -75,9 +82,7 @@
         .NavElements{
             display: none;
         }
-        .NavButton{
-            display: none;
-        }
+
         .Icon{
             display: inline;
             position: relative;
