--- a/hurtumartworkz/src/components/Footer/Footer.css
+++ b/hurtumartworkz/src/components/Footer/Footer.css
@@ -1,28 +1,47 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+/* footer */
 .footer {
-  padding: 1rem;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+      background-color: #ffffff;
+      padding: 10px 20px;
+      position: absolute;
+      bottom: 0; 
+      left: 0; 
+      right: 0;
+      gap: 40px;
+      min-height: 150px;
+      display: flex;
+      justify-content: center;
+    }
+
+.logo {
+  left: 50%;
+  right: 50%;
+  display:flex;
 }
 
-.socialMedia li:last-of-type {
-  margin-right: 0;
+ul {
+list-style: none;
 }
 
-.socialMedia li{
-  font-size: 1.3rem;
-  color: #fefefe;
+.socials {
+width: 50px;
+height: 50px;
 }
 
-.socialMedia li:hover {
-  color: #4a4a4a;
-  transition: color 0.3s ease-in;
+.socialMedia {
+left: 50%;
+right: 50%;
+gap: 10px;
+padding-bottom: 10px;
+display:flex;
+align-items: center;
 }
 
+p {
+text-align: center;
+}
