--- a/hurtumartworkz/src/components/Navbar/Navbar.css
+++ b/hurtumartworkz/src/components/Navbar/Navbar.css
@@ -27,6 +27,11 @@ body {
   display: none;
 }
 
+.nav-logo img {
+  position: absolute;
+  right: 10px;
+}
+
 .nav-elements ul {
   display: flex;
   justify-content: space-between;
