--- a/hurtumartworkz/src/components/Footer/Footer.css
+++ b/hurtumartworkz/src/components/Footer/Footer.css
@@ -11,11 +11,13 @@
 .footer-content {
   max-width: 200px;
   margin: 0 auto;
-  padding: 0 20px;
+  display: table;
 }
 
 .footer-logo img {
-  max-height: 70px;
+  width: 200px;
+  position: relative;
+  left: 25%;
 }
 
 .footer-social-media a {
@@ -32,6 +34,8 @@
 .footer-social-media-img{
   width: 40px;
   height: 40px;
+  position: relative;
+  left: 30%;
 }
 
 .footer-social-media-list {
