--- a/hurtumartworkz/src/components/Navbar/Navbar.css
+++ b/hurtumartworkz/src/components/Navbar/Navbar.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-  max-width: 1100px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 0 15px;
   display: flex;
@@ -27,15 +27,20 @@ body {
   display: none;
 }
 
-.nav-logo img {
-  position: absolute;
-  right: 10px;
+.navbar-logo img {
+  position: relative;
+  right: 0%;
+  margin-top: 70px;
+  margin-left: 100px;
+  width: 200px;
 }
 
 .nav-elements ul {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
+  font-size: 100px;
+  padding-right: 100px;
 }
 
 .nav-elements ul li:not(:last-child) {
