--- a/hurtumartworkz/src/pages/index.css
+++ b/hurtumartworkz/src/pages/index.css
@@ -4,10 +4,10 @@ h1 {
     font-size: 40px;
 }
 
-h2 {
+.index-h2 {
     position: relative;
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
     padding-left: 10%;
     padding-right: 10%;
 }
@@ -15,7 +15,7 @@ h2 {
 p {
     position: relative;
     text-align: center;
-    font-size: 20px;
+    font-size: 22px;
     padding-left: 10%;
     padding-right: 10%;
 }
